integrate simulator to heater api & add endpoint to start stop pid
